--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bot",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "prettier src --write && tsc",
     "main": "npm run build && node dist/index.js"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^20.12.12",
     "discord.js": "^14.15.2",
+    "prettier": "^3.2.5",
     "typescript": "^5.4.5"
   }
 }
