--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "prettier src --write && tsc",
-    "main": "npm run build && node dist/index.js"
+    "metadata": "node dist/generateMetadata.js",
+    "main": "npm run build && npm run metadata && node dist/index.js"
   },
   "repository": {
     "type": "git",
