--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20.12.12",
     "discord.js": "^14.15.2",
     "prettier": "^3.2.5",
+    "sandbox": "^0.8.6",
     "typescript": "^5.4.5"
   }
 }
