--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/node-fetch": "^2.6.11",
     "express": "^4.19.2",
+    "find-similar": "^1.2.5",
     "node-fetch": "^2.7.0"
   }
 }
