--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.53",
     "@types/express": "^4.17.21",
     "@types/node-fetch": "^2.6.11",
     "express": "^4.19.2",
